--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
 asgiref==3.2.3
+astroid==2.5.6
+atomicwrites==1.4.0
+attrs==21.2.0
+autopep8==1.5.7
 click==7.1.2
 dnspython==2.1.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
+iniconfig==1.1.1
+isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
-Pillow==7.0.0
+mccabe==0.6.1
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pycodestyle==2.7.0
 PyJWT==1.7.1
+pylint==2.8.2
 pymongo==3.11.4
+pyparsing==2.4.7
+pytest==6.2.4
 pytz==2019.3
 sqlparse==0.3.1
+toml==0.10.2
 Werkzeug==1.0.1
+wrapt==1.12.1
