--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
-asgiref==3.2.3
-click==7.1.2
+atomicwrites==1.4.0
+attrs==21.2.0
+click==8.0.0
+colorama==0.4.4
 dnspython==2.1.0
-Flask==1.1.2
+Flask==2.0.0
 Flask-PyMongo==2.3.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
+iniconfig==1.1.1
+itsdangerous==2.0.0
+Jinja2==3.0.0
 MarkupSafe==1.1.1
-Pillow==7.0.0
-PyJWT==1.7.1
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
 pymongo==3.11.4
-pytz==2019.3
-sqlparse==0.3.1
-Werkzeug==1.0.1
+PyMySQL==1.0.2
+pyparsing==2.4.7
+pytest==6.2.4
+toml==0.10.2
+Werkzeug==2.0.0
+wincertstore==0.2
