--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Flask-PyMongo==2.3.0
 iniconfig==1.1.1
 itsdangerous==2.0.0
 Jinja2==3.0.0
-MarkupSafe==1.1.1
+MarkupSafe==2.0.0
 packaging==20.9
 pluggy==0.13.1
 py==1.10.0
@@ -17,5 +17,6 @@ PyMySQL==1.0.2
 pyparsing==2.4.7
 pytest==6.2.4
 toml==0.10.2
+waitress==2.0.0
 Werkzeug==2.0.0
 wincertstore==0.2
